# itmo_recsys

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
models/: __init__.py  als_ann.py  dssm_model.py  user_knn.py  utils.py
notebooks/hw_2/: metrics.ipynb
notebooks/hw_3/: knn.ipynb
notebooks/hw_4/: mf.ipynb
notebooks/hw_5/: dssm.ipynb
service/: settings.py
service/api/: app.py  exception_handlers.py  views.py
tests/: conftest.py
tests/api/: test_views.py
